--- a/docs/07 前端实现.MD
+++ b/docs/07 前端实现.MD
@@ -25,3 +25,7 @@ npm i @ant-design/icons antd -S
 这种后台管理页面我们第一反应就会想到用一个"广"字型布局，Header显示logo、当前登录用户信息等，左侧显示菜单栏，右下角作为内容区。
 
 但是我们还有登录页面，不应该套用"广"字型布局。我们可以改一下layout.tsx文件，如果是login页面就返回空。
+
+我们也实现另一个AuthGuard.tsx，对于未登录的用户访问需要登录才能访问的页面，我们会跳转到登录页面。
+
+另外还有很多页面的实现细节，我们就不过多描述，大家可以直接运行项目查看效果。
