--- a/docs/01 关于.MD
+++ b/docs/01 关于.MD
@@ -68,9 +68,9 @@ It is a brilliant response to the brief. Unfortunately we have decided that we c
 
 Whilst you were in the top 10% of candidates for this role and your submission was excellent, we found a candidate that had more NextJs experience and was better rounded on the back-end side too.
 
-As this is one of the very first developer roles we’re hiring in China we need to be particularly selective. So this is also a reflection of our need for the 'perfect' fit for our business.
+As this is one of the very first developer roles we're hiring in China we need to be particularly selective. So this is also a reflection of our need for the 'perfect' fit for our business.
 
-We are releasing more roles early in 2026 - would you be happy for us to reach out when we launch those? I’d encourage you to apply.
+We are releasing more roles early in 2026 - would you be happy for us to reach out when we launch those? I'd encourage you to apply.
 
 I wish you the best of luck in your ongoing search.
 ```
