--- a/docs/07 前端实现.MD
+++ b/docs/07 前端实现.MD
@@ -28,4 +28,4 @@ npm i @ant-design/icons antd -S
 
 我们也实现另一个AuthGuard.tsx，对于未登录的用户访问需要登录才能访问的页面，我们会跳转到登录页面。
 
-另外还有很多页面的实现细节，我们就不过多描述，大家可以直接运行项目查看效果。
+另外还有很多页面的实现细节，我们就不过多描述，大家可以直接运行项目查看效果。也可以查看[截图](./screenshots/)。
