修改错别字

--- a/docs/01 关于.MD
+++ b/docs/01 关于.MD
@@ -7,9 +7,9 @@
 
 发完之后又互相聊了几句之后我才发现对方其实是要招后端，我告诉对方我的工作经验主要集中在前端，虽然后端也能写一点但是做不到独立开发。
 
-结果对方还是把的简历提交给了公司，过了一两天还说简历通过了筛选让我把简历发给创始人的邮箱。
+对方还是把我的简历提交给了公司，过了一两天还告诉我简历通过了筛选让我把简历发给创始人的邮箱。
 
-公司是一家初创的企业，在伦敦+上海一共也才20人左右。本来并没有报期待，但是我找工作也有四个多月了还没offer，所以就硬着头皮上了。
+公司是一家初创的企业，伦敦+上海一共也才20人左右。本来并没有报期待，但是我找工作也有四个多月了还没offer，所以就硬着头皮上了。
 
 创始人Review了我的简历之后约了一个的线上沟通，大概就是聊一下过往经历问一些问题，会上我也告诉了对方我前端经验会更丰富一些，后端虽然也有一些经验但是近几年写的不多，九年前做过全职PHP后端，但是太久了。
 
@@ -36,28 +36,28 @@ You can and should use any LLM coding assistants or tools you would usually work
 Do not submit any code that you have not read, checked and understood. Do not submit LLM-generated code that you have not edited.
 ```
 
-对方在伦敦，经常给我发邮件都是在深夜。我收到这个需求的第二天刚好是我儿子幼儿园办跑步活动，所以上午陪儿子去参加活动，中午做好饭吃完饭大概下午一点开始实现。
+对方在伦敦，经常给我发邮件都是在深夜。我收到这个需求的第二天刚好是我儿子幼儿园举行跑步活动，上午陪儿子去参加活动，中午做好饭吃完饭大概下午一点开始实现。
 
 傍晚又开车带小孩回乡下我父母家，中途耽误了三四个小时。晚上23：48终于把程序提交了。
 
-不过因为我的电脑安装不了Postgres DB，我就换成了MySQL。全程主要Cursor实现，然后去学习理解。由于我用的是免费版的Cursor，到后面单日发送请求超限额了，也只能手动改了。
+因为我的电脑安装不了Postgres DB，我就换成了MySQL。全程主要Cursor实现，然后去学习理解。我用的是免费版的Cursor，到后面单日发送请求超限额了，也只能手动改了。
 
-后端接口实现之后对方就开始跟我约正式面试时间。这下我有点慌了，虽然接口我确实实现了，但是都是靠AI实现的（对方声明了可以用大模型），我也都去理解了里面的实现，但是根本不足以应付一个多小时的面试。我再次跟对方声明我仅几年的工作经验主要都是前端开发，面试能不能以前端开发的问题为主，入职后我可以继续做全栈，不过可能会需要一个资深的后端带一段时间。结果对方把面试取消了，又让我运用已经实现的接口，把UI也实现一下，时效是两天。
+后端接口实现之后对方就开始跟我约正式面试时间。这下我有点慌了，虽然接口我确实实现了，但是都是靠AI实现的（对方声明了可以用大模型），我也都去理解了里面的实现，但是根本不足以应付一个多小时的面试。我再次跟对方声明我近几年的工作经验主要都是前端开发，面试能不能以前端开发的问题为主，入职后我可以继续做全栈，不过可能会需要一个资深的后端带一段时间。结果对方把面试取消了，又让我运用已经实现的接口，把UI也实现一下，时效是两天。
 
 Next.js是一个本身就是一个React框架，毫无疑问我得用React来实现这个UI。我之前工作一直是用的Angular，React和Vue一直都没有正式去用过。
 
-但是Angular在国内非常少的公司在用，这也是我找工作比较困难的原因之一。好在从开始找工作开始，我就开始在学React，我主要是基于ant-design-pro框架来学习React，开源的代码下载下来一边改一边运行看效果。ant-design-pro是采用Umi实现的一个前端应用框架，基于ant-design控件库，内置了很多插件和库，只需要轻松配置一下就能轻松实现路由、访问控制（权限）、数据流等功能。
+但是Angular在国内非常少的公司在用，这也是我找工作比较困难的原因之一。好在从开始找工作开始我就在学React，我主要是基于ant-design-pro框架来学习React，开源的代码下载下来一边改一边运行看效果。ant-design-pro是采用Umi实现的一个前端应用框架，基于ant-design控件库，内置了很多插件和库，只需要轻松配置一下就能轻松实现路由、访问控制（权限）、数据流等功能。
 
 为了能按时提交，我第一天晚上就熬到了凌晨三点多，把大部分功能都实现了。第二天就做了一些优化和Form验证。之后提交了并邮件通知对方，但是对方一直没回复，这之前我每次发邮件对方都会很快回复的。
 
 周末我就一直想这事，我自认为已经做得很不错了，在很短的时间里面把界面实现得丰富整洁漂亮、验证也很全、还有分页等功能，对方不应很惊讶吗？
 
-后来我回到Next.js这个框架，我就回顾我用Next.js来写接口，想着以后做全栈是不是可以去深入学习一下Next.js，找工作中也遇到很多公司在用这个技术。突然我想到Next.js其实是前后端都可以做的，会不会是我UI应该和Next.js实现的接口做到一起去，那样就不需要前后端分开部署。
+后来我回到Next.js这个框架，我就回顾我用Next.js来写接口，想着以后做全栈是不是可以去深入学习一下Next.js，找工作中也遇到很多公司在用这个技术。突然我想到Next.js其实是前后端都可以做的，会不会是UI应该和Next.js实现的接口做到一起去，那样就不需要前后端分开部署。
 
-所以我又花了两天时间在之前的Next.js项目上继续把UI也实现了，控件库还是ant-design，但是就没引入Umi和其他的复杂控件库或插件了。实现完之后我继续给对方发邮件，告诉他们我实现了两个接口，一个和后端是在一起的，一个是单独的。
+所以我又花了两天时间在之前的Next.js项目上继续把UI也实现了，控件库还是ant-design，但是就没引入Umi和其他的复杂控件库或插件了。实现完之后我继续给对方发邮件，告诉他们我实现了两个UI，一个和后端是在一起的，一个是可独立的部署和运行的。
 
-但是自从对方让我把UI实现一下之后，就再没会过我的邮件，期间我也给程序做了一些小修改或者优化，实现了模糊查询。
+但是自从对方让我把UI实现一下之后，就再没回过我的邮件，期间我也给程序做了一些小修改或者优化，实现了模糊查询。
 
-大概过了10天对方才告诉我他们不能聘用我了。
+大概过了10天对方才告诉我他们不能聘用我了，因为他们找到了一个有Next.js开发经验后端也很擅长的人。由于这是他们在中国招的第一个开发，所以他们得谨慎对待。不过他们26年初会多开一些HC，鼓励我到时继续申请。
 
-在这次应聘过程中，我还是学到了很多Next.js开发的知识，也想作为未来编程的一个方向去继续学习，所以打算以学习笔记的方式记录下我的实现过程。
+在这次应聘过程中，我还是学到了很多Next.js开发的知识，也想作为未来编程的一个方向去继续学习，所以以学习笔记的方式记录下我的实现过程。
