--- a/docs/05 后端数据验证.MD
+++ b/docs/05 后端数据验证.MD
@@ -2,7 +2,7 @@
 
 上一章我们介绍了API的实现，我们列举了一个查询Chef列表的接口的实现，支持模糊查询、分页、排序。
 
-那如果我们实现一个插入或更新数据的接口，我们经常会有一个数据验证，例如Chef的姓名、用户名、密码不能为空，甚至会限制字段的长度。
+如果我们实现一个插入或更新数据的接口，我们经常会有一个数据验证，例如Chef的姓名、用户名、密码不能为空，甚至会限制字段的长度。
 
 通常我们会在前端Form里面加上这些验证，那后端还需要添加这些验证吗？
 
