--- a/docs/01 关于.MD
+++ b/docs/01 关于.MD
@@ -7,9 +7,9 @@
 
 发完之后又互相聊了几句之后我才发现对方其实是要招后端，我告诉对方我的工作经验主要集中在前端，虽然后端也能写一点但是做不到独立开发。
 
-对方还是把我的简历提交给了公司，过了一两天还告诉我简历通过了筛选让我把简历发给创始人的邮箱。
+对方还是把我的简历提交给了公司，过了一两天告诉我简历通过了筛选让我把简历发给创始人的邮箱。
 
-公司是一家初创的企业，伦敦+上海一共也才20人左右。本来并没有报期待，但是我找工作也有四个多月了还没offer，所以就硬着头皮上了。
+公司是一家初创外企，伦敦+上海一共也才20人左右。本来并没有报期待，但是我找工作也有四个多月了还没offer，所以就硬着头皮上了。
 
 创始人Review了我的简历之后约了一个的线上沟通，大概就是聊一下过往经历问一些问题，会上我也告诉了对方我前端经验会更丰富一些，后端虽然也有一些经验但是近几年写的不多，九年前做过全职PHP后端，但是太久了。
 
